tests/baselines/reference/noCrashOnMixin.errors.txt
noCrashOnMixin.ts(21,9): error TS2674: Constructor of class 'Abstract' is protected and only accessible within the class declaration.


==== noCrashOnMixin.ts (1 errors) ====
    class Abstract {
        protected constructor() {
        }
    }
    
    class Concrete extends Abstract {
    }
    
    type Constructor<T = {}> = new (...args: any[]) => T;
    
    function Mixin<TBase extends Constructor>(Base: TBase) {
        return class extends Base {
        };
    }
    
    class Empty {
    }
    
    class CrashTrigger extends Mixin(Empty) {
        public trigger() {
            new Concrete();
            ~~~~~~~~~~~~~~
!!! error TS2674: Constructor of class 'Abstract' is protected and only accessible within the class declaration.
        }
    }